# sanctum-pool

./: .gitignore  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  STELLAR_HACKATHON_INFO.txt  STELLAR_IDEAS.txt  STELLAR_IDEAS_RESEARCH.txt  STELLAR_RESOURCES.txt  WEBAPP_PLAN.md  package-lock.json  package.json  render.yaml
asp-service/: curator.js  package.json
circuits/: merkle.circom  withdraw.circom
circuits/keys/: withdraw_vk.json
circuits/test/: multiplier2.circom
client/: package-lock.json  package.json
client/src/: address.js  auditor.js  auditorReveal.js  field.js  genWithdrawInput.js  merkle.js  note.js  poseidon.js  viewkey.js  withdrawInput.js
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
deployments/: pool_testnet.txt  verifier_testnet.txt
docs/: DEMO.md
operator/: config.js  operator.mjs  package-lock.json  package.json
scripts/: build_circuit.sh  e2e.sh  e2e_m2.sh  e2e_m3.sh  setup_circuit.sh
tools/circom2soroban/: Cargo.toml
tools/circom2soroban/src/: main.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/scripts/: operator.mjs  sync-circuits.mjs
web/src/: app.js  example.json  home.js  icons.js  main.js  polyfills.js  styles.css
web/src/lib/: notes.js  prove.js  soroban.js  toSoroban.js  wallet.js
