[package]
name = "sanctum-pool"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

# Shielded pool: deposits create commitments, withdrawals spend them via a
# Groth16 (BN254) membership+nullifier proof verified by the verifier contract.

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
